syntax = "proto3";

option go_package = "github.com/RaphaelPour/grpc-test/proto";

package server;

service Server {
    rpc GetInfo(EmptyRequest) returns (ServerInfo) {}
    rpc AddServer(ServerInfo) returns (EmptyResponse) {}
}

message EmptyRequest{}
message EmptyResponse{}

message ServerInfo {
    string name = 1;
    string author = 2;
    string description = 3;
}
